# dbt-starrocks

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: release.yaml
dbt/adapters/starrocks/: impl.py
dbt/include/starrocks/macros/materializations/models/: incremental.sql  incremental_strategy.sql
tests/functional/adapter/: test_incremental_microbatch.py
